[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Background/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/Colors.png" type="Texture" id=2]
[ext_resource path="res://Assets/Background/Stars.png" type="Texture" id=3]
[ext_resource path="res://Assets/Background/Galaxy.png" type="Texture" id=4]
[ext_resource path="res://Assets/SubPixelShader.tres" type="Material" id=5]
[ext_resource path="res://Environment/Background.gd" type="Script" id=6]

[node name="Background" type="ParallaxBackground"]
script = ExtResource( 6 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 1024, 1024 )

[node name="Background" type="Sprite" parent="ParallaxLayer"]
material = ExtResource( 5 )
texture = ExtResource( 1 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1024, 1024 )

[node name="Colors" type="Sprite" parent="ParallaxLayer2"]
modulate = Color( 1, 1, 1, 0.470588 )
material = ExtResource( 5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.3, 0.3 )
motion_mirroring = Vector2( 1024, 1024 )

[node name="Stars" type="Sprite" parent="ParallaxLayer3"]
material = ExtResource( 5 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1024, 1024 )

[node name="Galaxy" type="Sprite" parent="ParallaxLayer4"]
material = ExtResource( 5 )
texture = ExtResource( 4 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.7, 0.7 )
